<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the MainActivity,
     is displayed all over the application. Contains
     the fragment container and the bottomNavigationView

     @Authors Daniel Karlkvist, Robin Repo Wecklauf & Carl-Johan Björnson.

     -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Add components -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/primary_green_gradient"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation" />

</FrameLayout>
