<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the Login screen.
     Is displayed when the uses launches the application.

     @Authors Daniel Karlkvist & Robin Repo Wecklauf.
     -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/launch_screen_relativelayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/test_daniel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daniel" />

        <Button
            android:id="@+id/test_robin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_daniel_button"
            android:text="Robin" />

        <Button
            android:id="@+id/test_marcus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/test_robin_button"
            android:text="Marcus" />
    </RelativeLayout>


</RelativeLayout>
